# invico_back

./: pyproject.toml  run.py
scripts/: create_super_user.py
src/: .env.example  main.py
src/analysis/repositories/: control_recursos.py
src/analysis/routes/: __init__.py  control_recursos.py
src/analysis/schemas/: __init__.py  control_recursos.py
src/analysis/services/: control_recursos.py
src/auth/repositories/: users.py
src/auth/routes/: auth.py  users.py
src/auth/schemas/: users.py
src/auth/services/: auth.py  users.py
src/config/: __base_config.py  database.py
src/icaro/repositories/: actividades.py  carga.py  certificados.py  ctas_ctes.py  estructuras.py  fuentes.py  informe_contable.py  obras.py  partidas.py  programas.py  proveedores.py  proyectos.py  resumen_rend_obras.py  retenciones.py  subprogramas.py
src/icaro/routes/: __init__.py  carga.py  certificados.py  ctas_ctes.py  estructuras.py  informe_contable.py  obras.py  proveedores.py  resumen_rend_obras.py  retenciones.py
src/icaro/schemas/: __init__.py  actividades.py  carga.py  certificados.py  ctas_ctes.py  estructuras.py  fuentes.py  informe_contable.py  obras.py  partidas.py  programas.py  proveedores.py  proyectos.py  resumen_rend_obras.py  retenciones.py  subprogramas.py
src/icaro/services/: __init__.py  carga.py  certificados.py  ctas_ctes.py  estructuras.py  informe_contable.py  obras.py  proveedores.py  resumen_rend_obras.py  retenciones.py
src/utils/: __init__.py  alias_generator.py  base_service.py  crypto_manager.py  query_filter.py  router_factory.py  validate.py
(+99 files in other folders)
