[project]
name = "invico-back"
version = "0.20.1"
description = ""
authors = [
    {name = "Fernando Corrales",email = "fscpython@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.129.2,<0.130.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "pydantic-mongo (>=3.1.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "fastapi-jwt[authlib] (>=0.3.0,<0.4.0)",
    "passlib[bcrypt] (>=1.7,<2.0)",
    "bcrypt (==4.0.1)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "cryptography (>=46.0.5,<47.0.0)",
]
[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
